# job_board_rest_api

./: README.md  manage.py  pyproject.toml
board_manager/: apps.py  serializers.py  urls.py  views.py
job_board/: models.py  serializers.py  tests.py  urls.py  views.py
job_board_project/: asgi.py  settings.py  urls.py  wsgi.py
